# VMILayer

./: .gitignore  VK_LAYER_vmi.json  gen_json.py  generate_bindings.py  schema.json  xmake.lua
Include/VMI/: Defines.hpp  Viewer.hpp  VulkanFunctions.hpp  VulkanInstanceFunction.hpp  VulkanMemoryInspector.hpp  VulkanMemoryInspector.inl
Include/vulkan/: vk_layer_dispatch_table.h  vk_loader_extensions.c
Src/VMI/: Viewer.cpp  VkAllocateMemory.cpp  VkCreateDevice.cpp  VkCreateInstance.cpp  VkDestroyDevice.cpp  VkGetInstanceProcAddr.cpp  VkQueuePresentKHR.cpp  VulkanMemoryInspector.cpp
vmi-app/: package.json  pnpm-lock.yaml  vite.config.ts
vmi-app/app/: routes.ts
vmi-app/app/components/: launchApplicationModal.tsx  navBar.tsx
vmi-app/app/components/ui/: menubar.tsx
vmi-app/app/interfaces/: frames.ts
vmi-app/app/routes/: home.tsx  trace.tsx
vmi-app/src-tauri/: Cargo.toml  Cargo.toml.bak  build.rs  tauri.conf.json  vulkan_events.db
vmi-app/src-tauri/src/: database_schema.rs  lib.rs  main.rs
vmi-layer/: VK_LAYER_vmi.json  evaluate_dependency.py  gen_commands.py  gen_functions.py  xmake.lua
vmi-layer/Include/VMI/: VulkanFunctions.hpp  VulkanMemoryInspector.hpp  VulkanMemoryInspector.inl  vk_json_serializers.hpp
vmi-layer/Src/VMI/: VkAllocateMemory.cpp  VkCreateDevice.cpp  VkCreateInstance.cpp  VkDestroyDevice.cpp  VkDestroyInstance.cpp  VkGetInstanceProcAddr.cpp  VkQueuePresentKHR.cpp  VulkanMemoryInspector.cpp
