[package]
name = "VMI"
version = "0.1.0"
description = "Vulkan Memory Inspector"
authors = ["Arthur Vasseur"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
zmq = "0.10.0"
chrono = "0.4.40"
rusqlite = { version = "0.34.0", features = ["bundled"] }
r2d2_sqlite = "0.27.0"
r2d2 = "0.8.10"
